--- a/src/gui/mainwindow.ui
+++ b/src/gui/mainwindow.ui
@@ -37,6 +37,7 @@
      <string>File</string>
     </property>
     <addaction name="actionOpen_Image"/>
+    <addaction name="actionSave_asImage"/>
     <addaction name="actionTest_Create_Image_Viewer"/>
     <addaction name="actionExit"/>
    </widget>
@@ -80,6 +81,11 @@
   <action name="actionExit">
    <property name="text">
     <string>Exit</string>
+   </property>
+  </action>
+  <action name="actionSave_asImage">
+   <property name="text">
+    <string>Save as</string>
    </property>
   </action>
  </widget>
