Improved little bit ImageContainer and image info. Created setupInformation function and separate it from constructor. Small font changes in information about image

--- a/src/gui/informationaboutimage.ui
+++ b/src/gui/informationaboutimage.ui
@@ -26,6 +26,11 @@
    </item>
    <item>
     <widget class="QLabel" name="labelName">
+     <property name="font">
+      <font>
+       <pointsize>12</pointsize>
+      </font>
+     </property>
      <property name="text">
       <string>Image Name</string>
      </property>
@@ -36,6 +41,11 @@
    </item>
    <item>
     <widget class="QLabel" name="labelOriginalSize">
+     <property name="font">
+      <font>
+       <pointsize>12</pointsize>
+      </font>
+     </property>
      <property name="text">
       <string>Original Size</string>
      </property>
@@ -46,6 +56,11 @@
    </item>
    <item>
     <widget class="QLabel" name="labelPath">
+     <property name="font">
+      <font>
+       <pointsize>12</pointsize>
+      </font>
+     </property>
      <property name="text">
       <string>Path</string>
      </property>
