Connected all stuff needed edge detection to work. Setting max and min values of sliders as well as thresholds. Signals of Line edit is editingFinished TODO check lien 208 in Optionwidget.cpp why not working and think about refactoring option widget class to smaller ones

--- a/src/icons/icons.qrc
+++ b/src/icons/icons.qrc
@@ -2,5 +2,6 @@
     <qresource prefix="/mainWindow">
         <file>arrowRight.png</file>
         <file>ArrowLeft.png</file>
+        <file>acceptIcon.ico</file>
     </qresource>
 </RCC>
