Added Button Controls for Rotating with icons and Step spinbox

--- a/src/icons/icons.qrc
+++ b/src/icons/icons.qrc
@@ -3,5 +3,7 @@
         <file>arrowRight.png</file>
         <file>ArrowLeft.png</file>
         <file>acceptIcon.ico</file>
+        <file>rotatingLeftIcon.png</file>
+        <file>rotatingRightIcon.png</file>
     </qresource>
 </RCC>
